; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-audio-encoders.c_convert_speaker_layout.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-audio-encoders.c_convert_speaker_layout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_CH_LAYOUT_MONO = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_STEREO = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_SURROUND = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_4POINT0 = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_4POINT1 = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_5POINT1_BACK = common dso_local global i32 0, align 4
@AV_CH_LAYOUT_7POINT1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_speaker_layout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_speaker_layout(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %20 [
    i32 128, label %5
    i32 130, label %6
    i32 129, label %8
    i32 135, label %10
    i32 134, label %12
    i32 133, label %14
    i32 132, label %16
    i32 131, label %18
  ]

5:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

6:                                                ; preds = %1
  %7 = load i32, i32* @AV_CH_LAYOUT_MONO, align 4
  store i32 %7, i32* %2, align 4
  br label %21

8:                                                ; preds = %1
  %9 = load i32, i32* @AV_CH_LAYOUT_STEREO, align 4
  store i32 %9, i32* %2, align 4
  br label %21

10:                                               ; preds = %1
  %11 = load i32, i32* @AV_CH_LAYOUT_SURROUND, align 4
  store i32 %11, i32* %2, align 4
  br label %21

12:                                               ; preds = %1
  %13 = load i32, i32* @AV_CH_LAYOUT_4POINT0, align 4
  store i32 %13, i32* %2, align 4
  br label %21

14:                                               ; preds = %1
  %15 = load i32, i32* @AV_CH_LAYOUT_4POINT1, align 4
  store i32 %15, i32* %2, align 4
  br label %21

16:                                               ; preds = %1
  %17 = load i32, i32* @AV_CH_LAYOUT_5POINT1_BACK, align 4
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %1
  %19 = load i32, i32* @AV_CH_LAYOUT_7POINT1, align 4
  store i32 %19, i32* %2, align 4
  br label %21

20:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %18, %16, %14, %12, %10, %8, %6, %5
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
